tests/ui/parallel-rustc/infer-none-issue-120786.stderr
error[E0282]: type annotations needed
   |
LL |     |x: u32, y| x;
   |              ^
   |
help: consider giving this closure parameter an explicit type
   |
LL |     |x: u32, y: /* Type */| x;
   |               ++++++++++++

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     String::from(<str as AsRef<T>>::as_ref("x"));
   |                  ++++++++++++++++++++++++++   ~

error[E0283]: type annotations needed
   |
LL |     |x| String::from("x".as_ref());
   |         ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     |x| String::from("x".as_ref());
   |                          ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     |x| String::from(<str as AsRef<T>>::as_ref("x"));
   |                      ++++++++++++++++++++++++++   ~

error[E0283]: type annotations needed for `&_`
   |
LL |     let _ = "x".as_ref();
   |         ^       ------ type must be known at this point
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: consider giving this pattern a type, where the type for type parameter `T` is specified
   |
LL |     let _: &T = "x".as_ref();
   |          ++++

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     String::from(<str as AsRef<T>>::as_ref("x"));
   |                  ++++++++++++++++++++++++++   ~

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     String::from(<str as AsRef<T>>::as_ref("x"));
   |                  ++++++++++++++++++++++++++   ~

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     String::from(<str as AsRef<T>>::as_ref("x"));
   |                  ++++++++++++++++++++++++++   ~

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     String::from(<str as AsRef<T>>::as_ref("x"));
   |                  ++++++++++++++++++++++++++   ~

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     String::from(<str as AsRef<T>>::as_ref("x"));
   |                  ++++++++++++++++++++++++++   ~

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL |     String::from(<str as AsRef<T>>::as_ref("x"));
   |                  ++++++++++++++++++++++++++   ~

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
